# qr-code-generator-webapp-rust

./: .gitignore  Cargo.toml  README.md  index.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-to-github-pages.yaml
base64-wrapper/: Cargo.toml
base64-wrapper/src/: lib.rs
qr-code-wrapper/: Cargo.toml
qr-code-wrapper/src/: lib.rs
src/: main.rs
